force-app/main/default/objects/Account/fields/a_NAF_tatgets_2010__c.field-meta.xml
<CustomField>
    <fullName>a_NAF_tatgets_2010__c</fullName>
    <label>0- NAF tatgets 2010</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>