force-app/main/default/objects/Account/fields/Account_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Activity__c</fullName>
    <label>Account Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Semi-active</fullName>
            </value>
            <value>
                <fullName>Not active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>