force-app/main/default/objects/Account/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Set up &amp; Active</fullName>
            </value>
            <value>
                <fullName>Set up &amp; Inactive</fullName>
            </value>
            <value>
                <fullName>Under negotiation</fullName>
            </value>
            <value>
                <fullName>No further action required</fullName>
            </value>
            <value>
                <fullName>Previous contact made - now dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>