force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Set up &amp; Active</fullName>
            </value>
            <value>
                <fullName>Set up &amp; Inactive</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Under negotiation</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Set up &amp; Inactive (Brexit)</fullName>
            </value>
            <value>
                <fullName>No further action required</fullName>
            </value>
            <value>
                <fullName>Previous contact made - but now dormant</fullName>
            </value>
            <value>
                <fullName>No Jurisdiction</fullName>
            </value>
            <value>
                <fullName>No further trades</fullName>
            </value>
            <value>
                <fullName>On Stop (EMIR)</fullName>
            </value>
            <value>
                <fullName>Set up &amp; Active (On Hold - Credit)</fullName>
            </value>
            <value>
                <fullName>Set up &amp; Inactive (KYC lapsed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>