force-app/main/default/objects/Account/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <formula>IF( Actual_Margin_2011__c + Actual_Margin_2010__c + Actual_Margin_2009__c + Actual_Volume_T_2012__c &gt;0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>