force-app/main/default/objects/Account/fields/Acct_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Acct_Mgr__c</fullName>
    <description>Name of Shell Account Manager - please also see &quot;Contact Roles&quot; field below.</description>
    <label>Shell Account Mgr</label>
    <length>64</length>
    <type>Text</type>
</CustomField>