force-app/main/default/objects/Account/fields/Actual_Margin_2007__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin_2007__c</fullName>
    <label>Actual Margin $ 2007</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>