force-app/main/default/objects/Account/fields/Actual_Margin_2008__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin_2008__c</fullName>
    <description>Total Margin made in 2008</description>
    <label>Actual Margin $ 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>