force-app/main/default/objects/Account/fields/Actual_Margin_EPTB__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin_EPTB__c</fullName>
    <label>Actual Margin €</label>
    <length>50</length>
    <type>Text</type>
</CustomField>