force-app/main/default/objects/Account/fields/Actual_Volume_kt__c.field-meta.xml
<CustomField>
    <fullName>Actual_Volume_kt__c</fullName>
    <label>Actual Volume (kt)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>