force-app/main/default/objects/Account/fields/Actual_Volume_T_2012__c.field-meta.xml
<CustomField>
    <fullName>Actual_Volume_T_2012__c</fullName>
    <label>Actual Volume (T) 2012</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>