force-app/main/default/objects/Account/fields/Appraisal_Exires__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Exires__c</fullName>
    <label>Appraisal Exires</label>
    <type>Date</type>
</CustomField>