force-app/main/default/objects/Account/fields/Appraisal_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Expiry__c</fullName>
    <description>Expiry date of OTO/41 Credit Appraisal</description>
    <label>Appraisal Expiry</label>
    <type>Date</type>
</CustomField>