force-app/main/default/objects/Account/fields/Average_Margin__c.field-meta.xml
<CustomField>
    <fullName>Average_Margin__c</fullName>
    <formula>Actual_Volume_T_2012__c / Deals_Done_2008__c</formula>
    <label>Average Margin $ per Deal 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>