force-app/main/default/objects/Account/fields/Aviation_Expected_2012_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Aviation_Expected_2012_Emissions__c</fullName>
    <description>Expected 2012 Emissions for Aviation within EU.</description>
    <inlineHelpText>Expected 2012 Emissions for Aviation within EU.</inlineHelpText>
    <label>Aviation Expected 2012 EU Emissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>