force-app/main/default/objects/Account/fields/Aviation_Expected_2012_Net_Position_EU__c.field-meta.xml
<CustomField>
    <fullName>Aviation_Expected_2012_Net_Position_EU__c</fullName>
    <description>Expected 2012 Net EU ETS Position for Airline based on available projections.</description>
    <formula>1</formula>
    <inlineHelpText>Expected 2012 Net EU ETS Position for Airline based on available projections.</inlineHelpText>
    <label>Aviation Expected 2012 Net Position (EU)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>