force-app/main/default/objects/Account/fields/B2B_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Manager__c</fullName>
    <label>RM Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helen McGee</fullName>
            </value>
            <value>
                <fullName>Kenny Tay</fullName>
            </value>
            <value>
                <fullName>Kevin Heselden</fullName>
            </value>
            <value>
                <fullName>Kevin Kam-Fei Cheah</fullName>
            </value>
            <value>
                <fullName>Michael Furze</fullName>
            </value>
            <value>
                <fullName>Not B2B</fullName>
            </value>
            <value>
                <fullName>Peter Selvig</fullName>
            </value>
            <value>
                <fullName>Claire Pontal</fullName>
            </value>
            <value>
                <fullName>Sarah Pereira</fullName>
            </value>
            <value>
                <fullName>Ned Leary</fullName>
            </value>
            <value>
                <fullName>Pearly Lin</fullName>
            </value>
            <value>
                <fullName>Simon Xin</fullName>
            </value>
            <value>
                <fullName>Elaine Hee</fullName>
            </value>
            <value>
                <fullName>Clara Sherry</fullName>
            </value>
            <value>
                <fullName>Orla Mckenna</fullName>
            </value>
            <value>
                <fullName>Yih-Mey Ng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>