force-app/main/default/objects/Account/fields/B2B_CO2_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>B2B_CO2_Account_Manager__c</fullName>
    <description>B2B CO2 Marketer for account.</description>
    <inlineHelpText>B2B CO2 Marketer for account.</inlineHelpText>
    <label>B2B CO2 Marketer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>