force-app/main/default/objects/Account/fields/B2B_CO2_Probability__c.field-meta.xml
<CustomField>
    <fullName>B2B_CO2_Probability__c</fullName>
    <description>B2B CO2 Trading Probability of deal being executed.</description>
    <inlineHelpText>B2B CO2 Trading Probability of deal being executed.</inlineHelpText>
    <label>CO2 Probability - Short</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>