force-app/main/default/objects/Account/fields/B2B_CO2_Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>B2B_CO2_Prospect_Stage__c</fullName>
    <description>B2B CO2 Prospect Stage.</description>
    <inlineHelpText>B2B CO2 Prospect Stage.</inlineHelpText>
    <label>B2B CO2 Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Approached</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>