force-app/main/default/objects/Account/fields/B2B_Interest__c.field-meta.xml
<CustomField>
    <fullName>B2B_Interest__c</fullName>
    <description>Status of the entity to B2B.</description>
    <inlineHelpText>Status of the entity to B2B.</inlineHelpText>
    <label>B2B Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>