force-app/main/default/objects/Account/fields/Billing_Block__c.field-meta.xml
<CustomField>
    <fullName>Billing_Block__c</fullName>
    <description>Billing Block</description>
    <label>Billing Block</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Calculation Missing</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Compl Confirm Missng</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Prices Incomplete</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Check Terms of Paymt</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Check Terms of Dlv</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Check Credit Memo</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Check Debit Memo</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Entered in error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>