force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <inlineHelpText>Instert what category</inlineHelpText>
    <label>GC - Business Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>CF- Unbranded Resellers</fullName>
            </value>
            <value>
                <fullName>CF- Branded Resellers</fullName>
            </value>
            <value>
                <fullName>CF- Corporate</fullName>
            </value>
            <value>
                <fullName>SAV- Global Carriers</fullName>
            </value>
            <value>
                <fullName>SAV- Special Carriers</fullName>
            </value>
            <value>
                <fullName>SAV -General Aviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>