force-app/main/default/objects/Account/fields/CCL_vs_M2M__c.field-meta.xml
<CustomField>
    <fullName>CCL_vs_M2M__c</fullName>
    <formula>IF(M2M_B2B__c&lt;0,Contingent_Credit__c + M2M_B2B__c,Contingent_Credit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If M2M is positive, CCL remains as it is.
If M2M is negative, M2M is subtracted from the CCL.
Compare this number to the PFE Remaining - use the lower number for next deal.</inlineHelpText>
    <label>CCL less M2M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>