force-app/main/default/objects/Account/fields/CDM_JI_Interest__c.field-meta.xml
<CustomField>
    <fullName>CDM_JI_Interest__c</fullName>
    <label>CDM/JI Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Seller</fullName>
            </value>
            <value>
                <fullName>Primary Buyer</fullName>
            </value>
            <value>
                <fullName>Secondary-Offtake Seller</fullName>
            </value>
            <value>
                <fullName>Secondary-Offtake Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>