force-app/main/default/objects/Account/fields/CER_Volume_Traded__c.field-meta.xml
<CustomField>
    <fullName>CER_Volume_Traded__c</fullName>
    <inlineHelpText>Total CER volume traded to date</inlineHelpText>
    <label>CER Volume Traded</label>
    <length>50</length>
    <type>Text</type>
</CustomField>