force-app/main/default/objects/Account/fields/CO2_B2B_Margin_T__c.field-meta.xml
<CustomField>
    <fullName>CO2_B2B_Margin_T__c</fullName>
    <inlineHelpText>Put the expected margin we are lloking to make from this customer. Input in US$/tonne of CO2</inlineHelpText>
    <label>CO2 - Margin on Short- $/T</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>