force-app/main/default/objects/Account/fields/CO2_B2B_Target_CO2_Volume__c.field-meta.xml
<CustomField>
    <fullName>CO2_B2B_Target_CO2_Volume__c</fullName>
    <inlineHelpText>Input in Tonnes of CO2. This is used to as an input to estimate the potential volume we can sell</inlineHelpText>
    <label>CO2 B2B - Target Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>