force-app/main/default/objects/Account/fields/CO2_Est_2012_position__c.field-meta.xml
<CustomField>
    <fullName>CO2_Est_2012_position__c</fullName>
    <formula>CO2_Est_CO2_output_2012__c  -  CO2_Free_Allowances_for_2012__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Negative = the company has more than they need for compliance
If Positive= They need to buy allowances</inlineHelpText>
    <label>CO2- Est 2012 position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>