force-app/main/default/objects/Account/fields/CO2_Est_CO2_output_2012__c.field-meta.xml
<CustomField>
    <fullName>CO2_Est_CO2_output_2012__c</fullName>
    <formula>CO2_Est_Vol_Jet_2012__c * 3.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO2- Est CO2 output-2012</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>