force-app/main/default/objects/Account/fields/CO2_Est_Vol_Jet_2012__c.field-meta.xml
<CustomField>
    <fullName>CO2_Est_Vol_Jet_2012__c</fullName>
    <inlineHelpText>This the estimated volume of Jet that an airline will use flying in/out EU ETS</inlineHelpText>
    <label>CO2- Est Vol Jet Tonnes-2012</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>