force-app/main/default/objects/Account/fields/CO2_Free_Allowances_worth__c.field-meta.xml
<CustomField>
    <fullName>CO2_Free_Allowances_worth__c</fullName>
    <formula>CO2_Free_Allowances_for_2012__c  * 11.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO2- Free Allowances worth ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>