force-app/main/default/objects/Account/fields/CO2_Is_this_a_target_now__c.field-meta.xml
<CustomField>
    <fullName>CO2_Is_this_a_target_now__c</fullName>
    <inlineHelpText>Is this Customer in the target pool now</inlineHelpText>
    <label>CO2 - Is this a target now</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Unclear</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>