force-app/main/default/objects/Account/fields/CO2_Margin_Short_Allowances__c.field-meta.xml
<CustomField>
    <fullName>CO2_Margin_Short_Allowances__c</fullName>
    <formula>CO2_B2B_Target_CO2_Volume__c * B2B_CO2_Probability__c* CO2_B2B_Margin_T__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the margin on the annual shortfall only</inlineHelpText>
    <label>CO2 - Margin Short/long</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>