force-app/main/default/objects/Account/fields/CO2_Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>CO2_Master_Agreement__c</fullName>
    <description>Status of the master agreement for the entity.</description>
    <inlineHelpText>Status of the master agreement for the entity.</inlineHelpText>
    <label>CO2 Master Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In negotiation</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Not signed</fullName>
            </value>
            <value>
                <fullName>Signed (see notes)</fullName>
            </value>
            <value>
                <fullName>Signed and attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>