force-app/main/default/objects/Account/fields/CO2_Potential_OCAT__c.field-meta.xml
<CustomField>
    <fullName>CO2_Potential_OCAT__c</fullName>
    <inlineHelpText>This is used to show the potential OCAT from global commercial on CO2 trades</inlineHelpText>
    <label>CO2 - Potential OCAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>