force-app/main/default/objects/Account/fields/CO2_Priority__c.field-meta.xml
<CustomField>
    <fullName>CO2_Priority__c</fullName>
    <inlineHelpText>This is to be used to rank the targets</inlineHelpText>
    <label>CO2 Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>To Decide still</fullName>
                <default>true</default>
                <label>To Decide still</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>