force-app/main/default/objects/Account/fields/CO2_Route_To_Service__c.field-meta.xml
<CustomField>
    <fullName>CO2_Route_To_Service__c</fullName>
    <inlineHelpText>This is used to indicate who will manage the Customer CVP offer</inlineHelpText>
    <label>CO2- Route To Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undecided</fullName>
                <default>true</default>
                <label>Undecided</label>
            </value>
            <value>
                <fullName>Via the B2B</fullName>
            </value>
            <value>
                <fullName>Via Trading</fullName>
            </value>
            <value>
                <fullName>SEE</fullName>
            </value>
            <value>
                <fullName>Via a JV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>