force-app/main/default/objects/Account/fields/CO2_S_L_vol_Shell_Target__c.field-meta.xml
<CustomField>
    <fullName>CO2_S_L_vol_Shell_Target__c</fullName>
    <formula>CO2_B2B_Target_CO2_Volume__c  *  B2B_CO2_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the volume we are targeting</inlineHelpText>
    <label>CO2 - S/L vol Shell Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>