force-app/main/default/objects/Account/fields/CO2_Shell_Trading_GC_deal__c.field-meta.xml
<CustomField>
    <fullName>CO2_Shell_Trading_GC_deal__c</fullName>
    <label>CO2 - Shell Trading  GC deal $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>