force-app/main/default/objects/Account/fields/CO2_Total_Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>CO2_Total_Estimated_Margin__c</fullName>
    <formula>Free_Allowance_Margin__c + CO2_Margin_Short_Allowances__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total for both free amd Short</inlineHelpText>
    <label>CO2 - Total Estimated Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>