force-app/main/default/objects/Account/fields/CO2_Vol_allowances_Sold__c.field-meta.xml
<CustomField>
    <fullName>CO2_Vol_allowances_Sold__c</fullName>
    <label>CO2- Vol allowances Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>