force-app/main/default/objects/Account/fields/CO2_What_Stage_are_you_at__c.field-meta.xml
<CustomField>
    <fullName>CO2_What_Stage_are_you_at__c</fullName>
    <label>CO2 - What Stage are you at</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not a target</fullName>
            </value>
            <value>
                <fullName>Indentified as potential customer</fullName>
            </value>
            <value>
                <fullName>They have been contacted and show interest</fullName>
            </value>
            <value>
                <fullName>They have been contacted and show no interest</fullName>
            </value>
            <value>
                <fullName>They have been contacted and want us to pick up later</fullName>
            </value>
            <value>
                <fullName>A meeting has been held to introduce the full CVP</fullName>
            </value>
            <value>
                <fullName>Mater Agreements/ISDA have been sent</fullName>
            </value>
            <value>
                <fullName>In active negotations with them</fullName>
            </value>
            <value>
                <fullName>Master Agreement- ISDA Signed</fullName>
            </value>
            <value>
                <fullName>See Comment Section</fullName>
            </value>
            <value>
                <fullName>UNCLEAR</fullName>
            </value>
            <value>
                <fullName>Deals (Commercial) - done already</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>