force-app/main/default/objects/Account/fields/Company_Level_Size_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Company_Level_Size_Ranking__c</fullName>
    <description>Company Level Size Classification based on EU ETS 2008 Emissions.</description>
    <formula>IF( EU_ETS_Emissions_2008__c  &lt; 50000,4,IF(EU_ETS_Emissions_2008__c  &lt; 500000,3,IF(EU_ETS_Emissions_2008__c  &lt; 1000000,2,1)))</formula>
    <inlineHelpText>Company Level Size Classification based on EU ETS 2008 Emissions.</inlineHelpText>
    <label>Company Level Size Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>