force-app/main/default/objects/Account/fields/Competiton__c.field-meta.xml
<CustomField>
    <fullName>Competiton__c</fullName>
    <description>Any competitive information, if available</description>
    <label>Competiton</label>
    <length>255</length>
    <type>Text</type>
</CustomField>