force-app/main/default/objects/Account/fields/Compliance_Check2__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Check2__c</fullName>
    <label>Compliance Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>